<resources>
    <string name="app_name">Frequency</string>
    <string name="device_chinese">设备</string>
    <string name="ble_english">BLE</string>
    <string name="control_chinese">控制</string>
    <string name="wifi_english">WIFI</string>
    <string name="me_chinese">我的</string>
    <string name="hint_chinese">提示</string>
    <string name="appneedpermission_chinese">您当前的操作需要该权限才可调度此设备硬件正常工作</string>
    <string name="give_chinese">授予</string>
    <string name="reject_chinese">拒绝</string>
    <string name="permissionapplycheckthreaderr">PermissionApplyCheck method cannot be called from the main Thread</string>
    <string name="packagename">com.org701enti.frequency</string>
    <string name="unknowndevice_chinese">未知设备</string>
    <string name="devicename_english">DeviceName</string>
    <string name="verticalslidevavetostopsacn_chinese_chinese">上下滑动波形以停止扫描</string>
    <string name="horizontalslidevavetostartsacn_chinese">左右滑动波形来启动扫描</string>
    <string name="horizontalslidedevicetoselectoperaction_chinese">左右滑动扫描结果选择操作</string>
    <string name="meter_rice_chinese">米</string>
    <string name="error_chinese">异常</string>
    <string name="userdevicehardwareunsupport">抱歉,您的设备的硬件当前可能无法支持所需操作</string>
    <string name="cancel_chinese">取消</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="returnapp_chinese">退出APP</string>
    <string name="tag_blemaintransaction">TagBleMainTransaction</string>
    <string name="tag_controlmaintransaction">TagControlMainTransaction</string>
    <string name="pleasecontinuewhenbluetoothenabled_chinese">您现在可以继续操作</string>
    <string name="addtodevice_chinese">加入设备</string>
    <string name="sticktotop_chinese">将其置顶</string>
    <string name="checkinformation_chinese">检查信息</string>
    <string name="startcontrol_chinese">开始控制</string>
    <string name="updatedeviceinformation">现在更新设备信息</string>
    <string name="insertnewdeviceinformation">现在插入新设备信息</string>
    <string name="fakedevice_chinese">伪造设备</string>
    <string name="completeinsertdatafollowing_chinese">完成插入以下数据:</string>
    <string name="insertdataerror_chinese">在插入数据时发现异常</string>
    <string name="insert_chinese">插入</string>
    <string name="update_chinese">更新</string>
</resources>